fix: added flex-wrap prop to jobs section

--- a/src/app/jobs/styles.module.scss
+++ b/src/app/jobs/styles.module.scss
@@ -34,6 +34,7 @@
     align-items: center;
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     gap: 72px;
     justify-content: center;
 }
